# Ghost-Poker

./: .env.example  .gitignore  JOURNAL.md  MASTER.md  README.md  ROADMAP.md  pyproject.toml
data/config/: pokerth_layout.json
scripts/: calibrate_layout.py  capture_reference.py  control_panel.py  debug_arm_window.py  debug_key_state.py  debug_perception.py  preview_layout.py  show_runtime_profile.py  smoke_test.py  validate_j0.py  watch_action_plan.py  watch_table_state.py
src/ghost_poker/: __init__.py
src/ghost_poker/brain/: __init__.py  decision.py  meta_backend.py
src/ghost_poker/control/: __init__.py  executor.py  kill_switch.py  panel_state.py  runtime_mode.py
src/ghost_poker/orchestrator/: __init__.py  action_plan.py  runtime_profile.py
src/ghost_poker/perception/: __init__.py  layout.py  ocr.py  regions.py  stability.py  table_state.py  window.py
src/ghost_poker/utils/: __init__.py  runtime_config.py
tests/brain/: test_meta_backend.py
tests/control/: test_executor.py  test_kill_switch.py  test_panel_state.py  test_runtime_mode.py
tests/orchestrator/: test_action_plan.py  test_runtime_profile.py
tests/perception/: test_stability.py  test_table_state.py
tests/scripts/: test_watch_action_plan.py  test_watch_table_state.py
tests/utils/: test_runtime_config.py
