[project]
name = "ghost-poker"
version = "0.0.1"
description = "Agent IA pour poker en ligne — perception hybride (DOM+vision), décision hybride (solver+LLM), contrôle souris humain."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "kinowill" }]

dependencies = [
    "mss>=9.0.1",
    "opencv-python>=4.10.0.84",
    "numpy>=1.26,<2.0",
    "pyautogui>=0.9.54",
    "treys>=0.1.8",
    "loguru>=0.7.2",
    "mistralai>=1.2.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.6.0",
]
ocr = [
    "paddleocr>=2.8.0",
    "paddlepaddle>=2.6.0",
]
browser = [
    "playwright>=1.47.0",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ghost_poker"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
